[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.20.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1" }
revm-primitives = { version = "=2.0.0", default-features = false, features = ["serde"] }
serde = "1.0"
simple-hasher = { path = "../simple-hasher" }